Fix CSS of our react-table
There is no reason to leave 1% of free space to the right of the table.
Furthermore, the menu bar slightly overlapped with the content area,
and in narrow browser windows, the pagination bar hid the horizontal
scoll bar.

--- a/benchexec/tablegenerator/react-table/src/App.scss
+++ b/benchexec/tablegenerator/react-table/src/App.scss
@@ -24,7 +24,6 @@ $hover-color: darken(white, 20%);
 .btn {
   margin: 0 10px 9px 0;
   text-align: center;
-  padding: auto;
   height: 35px;
   cursor: pointer;
 
@@ -85,21 +84,9 @@ $hover-color: darken(white, 20%);
   .overview-container {
     background: $key-color;
   }
-  .menu-item {
-    display: inline-block;
-    border: 1px solid transparent;
-    border-bottom: none;
-    bottom: -1px;
-    position: relative;
-    list-style: none;
-    padding: 6px 12px;
-    cursor: pointer;
-  }
   .menu {
     display: flex;
     width: 100vw;
-    height: 36px;
-    margin-bottom: 5px;
     position: fixed;
     top: 0;
     padding: 10px 10px 0;
@@ -109,10 +96,9 @@ $hover-color: darken(white, 20%);
     align-items: flex-start;
 
     .menu-item {
-      // width: 18vw;
-      height: 23px;
+      height: 17px;
       margin-right: 1px;
-      text-align: center;
+      padding: 8px 13px;
       border-radius: 8px 8px 0 0;
       background: rgba(255, 255, 255, 0.5);
       font-size: 14px;
@@ -208,7 +194,6 @@ $hover-color: darken(white, 20%);
     }
   }
   #statistics .rt-table {
-    border: 1px solid #ddd;
     .rt-td {
       padding-top: 8px;
       padding-bottom: 8px;
@@ -257,10 +242,6 @@ $hover-color: darken(white, 20%);
     input {
       margin-right: 40px;
     }
-  }
-  .rt-table {
-    width: 99%;
-    margin-bottom: 40px;
   }
   .rt-thead {
     &.-headerGroups > div > div {
@@ -312,13 +293,6 @@ $hover-color: darken(white, 20%);
     .rt-tr-group:last-child {
       border-bottom: 1px solid lightgrey;
     }
-  }
-  .pagination-bottom {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    z-index: 10;
-    background: white;
   }
 
   .correct {
@@ -496,4 +470,7 @@ $hover-color: darken(white, 20%);
 
 .rt-td {
   text-align: left;
+}
+.ReactTable {
+  border: none !important;
 }
